# ssh-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: df_us.csv  my_df_us.csv
ssh_analysis/: process_auth_logs.py  ssh_log.proto  ssh_log_pb2.py  utils.py  visuals.py
streamlit_app/: SSH_Analysis_Home.py  utils.py
streamlit_app/pages/: 1_📀_Data.py  2_📈_Time_Series_Plots.py  3_🌎_Geo_Plots.py
