[tool.poetry]
name = "ssh_analysis"
version = "0.1.0"
description = ""
authors = ["Nicholas Renninger <18428974+nicholasRenninger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-geoip-geolite2 = "^2015.0303"
ipykernel = "^6.15.1"
python-geoip-python3 = "^1.3"
iso3166 = "^2.1.1"
numpy = "^1.23.1"
plotly = "^5.9.0"
pandas = "^1.4.3"
jupyterlab = ">=3"
ipywidgets = ">=7.6"
protobuf = "^4.21.4"
pydeck = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
